--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "GPL-3.0",
   "scripts": {
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
-    "build-dev": "babel-node backend/server.js",
-    "build-prod": "webpack --color --config webpack.config.prod.babel.js"
+    "build-prod": "webpack --color --config webpack.config.prod.babel.js",
+    "run-dev": "babel-node backend/server.js",
+    "run-prod": "NODE_ENV=production babel-node backend/server.js"
   },
   "dependencies": {
     "body-parser": "^1.16.0",
@@ -34,6 +35,7 @@
     "@types/react-router-redux": "^4.0.40",
     "@types/webpack": "^2.2.5",
     "@types/webpack-env": "^1.13.0",
+    "add-asset-html-webpack-plugin": "^1.0.2",
     "autoprefixer": "^6.7.2",
     "awesome-typescript-loader": "^3.0.4-rc.0",
     "babel-cli": "^6.22.2",
@@ -60,6 +62,7 @@
     "gulp-stylelint": "^3.8.0",
     "gulp-tslint": "^7.1.0",
     "hammerjs": "^2.0.8",
+    "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.0",
@@ -86,7 +89,6 @@
     "typescript": "^2.1.5",
     "uglify-js": "^2.7.5",
     "url-loader": "^0.5.7",
-    "webpack-bundle-tracker": "^0.2.0",
     "webpack-md5-hash": "^0.0.5",
     "yargs": "^6.6.0"
   },
