--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-webpack-react-typescript-hmr-boilerplate",
   "version": "1.0.0",
   "repository": "git@github.com:Armour/Express-Webpack-React-Typescript-HMR-Boilerplate.git",
-  "author": "Armour <497052684@qq.com>",
+  "author": "Chong Guo <cguo@azendless.com>",
   "license": "GPL-3.0",
   "scripts": {
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
@@ -15,10 +15,11 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "morgan": "^1.8.1",
+    "pg": "^6.1.2",
     "serve-favicon": "^2.3.2",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
@@ -27,21 +28,22 @@
     "@types/jquery": "^2.0.40",
     "@types/materialize-css": "^0.98.0",
     "@types/node": "^7.0.5",
-    "@types/react": "^15.0.9",
+    "@types/prismjs": "^1.4.18",
+    "@types/react": "^15.0.11",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^3.0.3",
     "@types/react-router-redux": "^4.0.40",
-    "@types/webpack": "^2.2.5",
+    "@types/webpack": "^2.2.6",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^1.0.2",
-    "autoprefixer": "^6.7.2",
-    "awesome-typescript-loader": "^3.0.4-rc.2",
+    "autoprefixer": "^6.7.3",
+    "awesome-typescript-loader": "^3.0.4",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.1",
+    "babel-loader": "^6.3.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -54,7 +56,7 @@
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
@@ -66,9 +68,10 @@
     "image-webpack-loader": "^3.2.0",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.0",
-    "postcss": "^5.2.13",
+    "postcss": "^5.2.14",
     "postcss-cssnext": "^2.9.0",
-    "postcss-loader": "^1.3.0",
+    "postcss-loader": "^1.3.1",
+    "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "v3.0.0-beta.6",
@@ -77,13 +80,13 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.0",
+    "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.6.0",
     "stylelint-config-standard": "^16.0.0",
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
-    "tslint-eslint-rules": "^3.3.0",
+    "tslint-eslint-rules": "^3.4.0",
     "tslint-react": "^2.4.0",
     "typescript": "^2.1.5",
     "uglify-js": "^2.7.5",
