--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "express-webpack-react-typescript-hmr-boilerplate",
   "version": "1.0.0",
-  "repository": "git@github.com:Armour/Express-Webpack-React-Typescript-HMR-Boilerplate.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Armour/Express-Webpack-React-Typescript-HMR-Boilerplate.git"
+  },
   "author": "Chong Guo <cguo@azendless.com>",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "scripts": {
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
     "build-prod": "webpack --color --config webpack.config.prod.babel.js",
-    "run-dev": "babel-node backend/server.js",
-    "run-prod": "NODE_ENV=production babel-node backend/server.js"
+    "server": "babel-node backend/server.js"
   },
   "dependencies": {
     "body-parser": "^1.16.1",
@@ -16,10 +18,10 @@
     "express": "^4.14.1",
     "morgan": "^1.8.1",
     "pg": "^6.1.2",
-    "serve-favicon": "^2.3.2",
+    "serve-favicon": "^2.4.0",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.0"
+    "webpack-hot-middleware": "^2.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
@@ -29,17 +31,23 @@
     "@types/materialize-css": "^0.98.0",
     "@types/node": "^7.0.5",
     "@types/prismjs": "^1.4.18",
-    "@types/react": "^15.0.11",
+    "@types/react": "^15.0.12",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
     "@types/react-redux": "^4.4.36",
-    "@types/react-router": "^3.0.3",
-    "@types/react-router-redux": "^4.0.40",
-    "@types/webpack": "^2.2.6",
+    "@types/react-router": "^3.0.5",
+    "@types/react-router-redux": "^4.0.41",
+    "@types/redux-devtools": "^3.0.37",
+    "@types/redux-devtools-dock-monitor": "^1.1.30",
+    "@types/redux-devtools-log-monitor": "^1.0.30",
+    "@types/redux-logger": "^2.6.34",
+    "@types/redux-promise": "^0.5.24",
+    "@types/uuid": "^2.0.29",
+    "@types/webpack": "^2.2.7",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^1.0.2",
-    "autoprefixer": "^6.7.3",
-    "awesome-typescript-loader": "^3.0.4",
+    "autoprefixer": "^6.7.5",
+    "awesome-typescript-loader": "^3.0.8",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
@@ -49,50 +57,56 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.2",
     "del": "^2.2.2",
-    "eslint": "^3.15.0",
+    "eslint": "^3.16.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-stylelint": "^3.8.0",
+    "gulp-stylelint": "^3.9.0",
     "gulp-tslint": "^7.1.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.0",
-    "postcss": "^5.2.14",
+    "postcss": "^5.2.15",
     "postcss-cssnext": "^2.9.0",
-    "postcss-loader": "^1.3.1",
+    "postcss-loader": "^1.3.2",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "v3.0.0-beta.6",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-logger": "^2.8.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.1",
-    "style-loader": "^0.13.1",
-    "stylelint": "^7.6.0",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.2",
+    "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
-    "ts-loader": "^2.0.0",
+    "ts-loader": "^2.0.1",
     "tslint": "^4.4.2",
     "tslint-eslint-rules": "^3.4.0",
     "tslint-react": "^2.4.0",
-    "typescript": "^2.1.5",
+    "typescript": "^2.2.1",
     "uglify-js": "^2.7.5",
-    "url-loader": "^0.5.7",
-    "webpack-md5-hash": "^0.0.5",
-    "yargs": "^6.6.0"
+    "url-loader": "^0.5.8",
+    "uuid": "^3.0.1",
+    "webpack-md5-hash": "^0.0.5"
   },
   "browserslist": [
     "> 1%",
