--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - "node"
+install:
+  - yarn
+  - yarn global add gulp
+  - yarn global add babel-cli
+before_script:
+  - NODE_ENV=test gulp
+script:
+  - npm test
