--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
     "build-prod": "webpack --color --config webpack.config.prod.babel.js",
-    "server": "babel-node backend/server.js"
+    "server": "babel-node backend/server.js",
+    "test": "jest --no-cache"
   },
   "dependencies": {
     "body-parser": "^1.17.0",
@@ -27,6 +28,7 @@
     "@types/express": "^4.0.35",
     "@types/hammerjs": "^2.0.34",
     "@types/history": "^4.5.0",
+    "@types/jest": "^18.1.1",
     "@types/jquery": "^2.0.40",
     "@types/materialize-css": "^0.98.0",
     "@types/node": "^7.0.5",
@@ -42,6 +44,7 @@
     "@types/redux-devtools-log-monitor": "^1.0.30",
     "@types/redux-logger": "^2.6.34",
     "@types/redux-promise": "^0.5.24",
+    "@types/superagent": "^2.0.36",
     "@types/uuid": "^2.0.29",
     "@types/webpack": "^2.2.7",
     "@types/webpack-env": "^1.13.0",
@@ -51,6 +54,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -59,7 +63,7 @@
     "babel-register": "^6.23.0",
     "css-loader": "^0.26.2",
     "del": "^2.2.2",
-    "eslint": "^3.16.1",
+    "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
@@ -74,6 +78,7 @@
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
+    "jest": "^19.0.2",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.0",
     "postcss": "^5.2.15",
@@ -98,11 +103,13 @@
     "style-loader": "^0.13.2",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
+    "superagent": "^3.5.0",
     "ts-loader": "^2.0.1",
     "tslint": "^4.5.1",
     "tslint-eslint-rules": "^3.4.0",
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
+    "typescript-babel-jest": "^1.0.1",
     "uglify-js": "^2.8.5",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
@@ -111,5 +118,14 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "^.+\\.tsx?$": "typescript-babel-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
+    "moduleDirectories": ["node_modules", "frontend/src", "backend"],
+    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json" ]
+  }
 }
