--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
     "build-prod": "webpack --color --config webpack.config.prod.babel.js",
     "server": "babel-node backend/server.js",
-    "test": "jest --no-cache"
+    "test": "jest --no-cache --coverage",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "dependencies": {
     "body-parser": "^1.17.0",
@@ -25,6 +26,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "devDependencies": {
+    "@types/deep-freeze": "^0.0.29",
     "@types/express": "^4.0.35",
     "@types/hammerjs": "^2.0.34",
     "@types/history": "^4.5.0",
@@ -61,7 +63,9 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
+    "coveralls": "^2.11.16",
     "css-loader": "^0.26.2",
+    "deep-freeze": "^0.0.1",
     "del": "^2.2.2",
     "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -125,7 +129,17 @@
       "^.+\\.tsx?$": "typescript-babel-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
-    "moduleDirectories": ["node_modules", "frontend/src", "backend"],
-    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json" ]
+    "moduleDirectories": [
+      "node_modules",
+      "frontend/src",
+      "backend"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "json"
+    ]
   }
 }
