--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "build-prod": "webpack --color --config webpack.config.prod.babel.js",
     "server": "babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "precommit": "yarn test",
+    "prepush": "yarn test"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
@@ -80,6 +83,7 @@
     "gulp-tslint": "^7.1.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.13.2",
     "image-webpack-loader": "^3.2.0",
     "jest": "^19.0.2",
     "jquery": "^3.1.1",
