--- a/package.json
+++ b/package.json
@@ -22,23 +22,22 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
-    "pg": "^6.1.3",
+    "pg": "^6.1.4",
     "serve-favicon": "^2.4.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   },
   "devDependencies": {
-    "@types/deep-freeze": "^0.0.29",
     "@types/express": "^4.0.35",
     "@types/hammerjs": "^2.0.34",
     "@types/history": "^4.5.0",
-    "@types/jest": "^18.1.1",
+    "@types/jest": "^19.2.0",
     "@types/jquery": "^2.0.40",
     "@types/materialize-css": "^0.98.0",
-    "@types/node": "^7.0.5",
+    "@types/node": "^7.0.8",
     "@types/prismjs": "^1.4.18",
-    "@types/react": "^15.0.14",
+    "@types/react": "^15.0.15",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
     "@types/react-redux": "^4.4.37",
@@ -51,7 +50,7 @@
     "@types/redux-promise": "^0.5.24",
     "@types/superagent": "^2.0.36",
     "@types/uuid": "^2.0.29",
-    "@types/webpack": "^2.2.8",
+    "@types/webpack": "^2.2.11",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^1.0.2",
     "autoprefixer": "^6.7.6",
@@ -66,8 +65,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
     "coveralls": "^2.11.16",
-    "css-loader": "^0.26.2",
-    "deep-freeze": "^0.0.1",
+    "css-loader": "^0.27.2",
     "del": "^2.2.2",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
@@ -85,6 +83,7 @@
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.2",
     "image-webpack-loader": "^3.2.0",
+    "immutable": "^4.0.0-rc.1",
     "jest": "^19.0.2",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.0",
@@ -117,7 +116,7 @@
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
     "typescript-babel-jest": "^1.0.1",
-    "uglify-js": "^2.8.5",
+    "uglify-js": "^2.8.10",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "webpack-md5-hash": "^0.0.5"
