--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "removeComments": true,
     "moduleResolution": "node",
     "baseUrl": "frontend/src",
+    "outDir": "build",
     "typeRoots": [
       "node_modules/@types"
     ]
