--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
     "build-prod": "webpack --color --config webpack.config.prod.babel.js",
     "server": "babel-node backend/server.js",
-    "test": "jest --no-cache --coverage && tsc && babel-node remap-coverage.babel.js",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "test": "jest --no-cache --coverage --runInBand",
+    "coveralls": "cat ./coverage/remapped/lcov.info | ./node_modules/.bin/coveralls",
     "precommit": "yarn test",
     "prepush": "yarn test"
   },
@@ -21,10 +21,8 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
-    "lodash": "^4.17.4",
     "morgan": "^1.8.1",
     "pg": "^6.1.4",
-    "remap-istanbul": "^0.9.1",
     "serve-favicon": "^2.4.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
@@ -112,12 +110,12 @@
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
     "superagent": "^3.5.0",
+    "ts-jest": "^19.0.0",
     "ts-loader": "^2.0.1",
     "tslint": "^4.5.1",
     "tslint-eslint-rules": "^3.4.0",
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
-    "typescript-babel-jest": "^1.0.1",
     "uglify-js": "^2.8.10",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
@@ -128,9 +126,17 @@
     "last 2 versions"
   ],
   "jest": {
-    "transform": {
-      "^.+\\.(t|j)sx?$": "typescript-babel-jest"
+    "globals": {
+      "__TS_CONFIG__": {
+        "module": "commonjs",
+        "target": "es6",
+        "jsx": "react"
+      }
     },
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
     "testPathIgnorePatterns": [
       "node_modules",
@@ -145,8 +151,7 @@
       "js",
       "jsx",
       "ts",
-      "tsx",
-      "json"
+      "tsx"
     ]
   }
 }
