--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -67,7 +67,7 @@
     "coveralls": "^2.11.16",
     "css-loader": "^0.27.3",
     "del": "^2.2.2",
-    "eslint": "^3.17.1",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
@@ -83,19 +83,19 @@
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.2",
     "image-webpack-loader": "^3.2.0",
-    "immutable": "^4.0.0-rc.1",
+    "immutable": "next",
     "jest": "^19.0.2",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.0",
     "node-sass": "^4.5.0",
     "postcss": "^5.2.15",
-    "postcss-cssnext": "^2.9.0",
+    "postcss-cssnext": "^2.10.0",
     "postcss-loader": "^1.3.3",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "v3.0.0-beta.6",
     "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
@@ -106,17 +106,17 @@
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.14.1",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
-    "superagent": "^3.5.0",
-    "ts-jest": "^19.0.1",
-    "ts-loader": "^2.0.1",
+    "superagent": "^3.5.1",
+    "ts-jest": "^19.0.2",
+    "ts-loader": "^2.0.2",
     "tslint": "^4.5.1",
-    "tslint-eslint-rules": "^3.4.0",
+    "tslint-eslint-rules": "^3.5.1",
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
-    "uglify-js": "^2.8.10",
+    "uglify-js": "^2.8.13",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "webpack-md5-hash": "^0.0.5"
