--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
-    "pg": "^6.1.4",
+    "pg": "^6.1.5",
     "serve-favicon": "^2.4.1",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   },
@@ -35,29 +35,29 @@
     "@types/jest": "^19.2.2",
     "@types/jquery": "^2.0.40",
     "@types/materialize-css": "^0.98.0",
-    "@types/node": "^7.0.8",
-    "@types/prismjs": "^1.4.18",
-    "@types/react": "^15.0.15",
+    "@types/node": "^7.0.10",
+    "@types/prismjs": "^1.6.0",
+    "@types/react": "^15.0.18",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
-    "@types/react-redux": "^4.4.37",
+    "@types/react-redux": "^4.4.38",
     "@types/react-router": "^3.0.8",
     "@types/react-router-redux": "^4.0.42",
     "@types/redux-devtools": "^3.0.37",
     "@types/redux-devtools-dock-monitor": "^1.1.30",
     "@types/redux-devtools-log-monitor": "^1.0.30",
-    "@types/redux-logger": "^2.6.34",
+    "@types/redux-logger": "^2.10.0",
     "@types/redux-promise": "^0.5.24",
     "@types/superagent": "^2.0.36",
     "@types/uuid": "^2.0.29",
-    "@types/webpack": "^2.2.11",
+    "@types/webpack": "^2.2.12",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^1.0.2",
     "autoprefixer": "^6.7.6",
     "awesome-typescript-loader": "^3.0.8",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -72,7 +72,7 @@
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "gulp": "^3.9.1",
@@ -83,10 +83,10 @@
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.2",
     "image-webpack-loader": "^3.2.0",
-    "immutable": "next",
+    "immutable": "4.0.0-rc.2",
     "jest": "^19.0.2",
-    "jquery": "^3.2.0",
-    "node-sass": "^4.5.0",
+    "jquery": "^3.2.1",
+    "node-sass": "^4.5.1",
     "postcss": "^5.2.15",
     "postcss-cssnext": "^2.10.0",
     "postcss-loader": "^1.3.3",
@@ -101,22 +101,22 @@
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
-    "redux-logger": "^2.8.2",
+    "redux-logger": "^2.10.2",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.2",
-    "style-loader": "^0.14.1",
+    "style-loader": "^0.16.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
-    "superagent": "^3.5.1",
+    "superagent": "^3.5.2",
     "ts-jest": "^19.0.2",
-    "ts-loader": "^2.0.2",
+    "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
     "tslint-eslint-rules": "^3.5.1",
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
-    "uglify-js": "^2.8.13",
+    "uglify-js": "^2.8.14",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "webpack-md5-hash": "^0.0.5"
