--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "awesome-typescript-loader": "^3.0.8",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
-    "babel-eslint": "^7.2.0",
+    "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -101,7 +101,7 @@
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
-    "redux-logger": "^2.10.2",
+    "redux-logger": "^3.0.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
@@ -116,7 +116,7 @@
     "tslint-eslint-rules": "^3.5.1",
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
-    "uglify-js": "^2.8.14",
+    "uglify-js": "^2.8.15",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "webpack-md5-hash": "^0.0.5"
@@ -139,8 +139,7 @@
     "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
     "testPathIgnorePatterns": [
-      "node_modules",
-      "build"
+      "node_modules"
     ],
     "moduleDirectories": [
       "node_modules",
