--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,11 @@
       "plugins": [
         "transform-runtime"
       ]
+    },
+    "production": {
+      "plugins": [
+        "transform-runtime"
+      ]
     }
   }
 }
