--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
     "profiling": "profiling=true webpack --color --config webpack.config.prod.babel.js",
     "server": "babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
-    "coveralls": "cat ./coverage/remapped/lcov.info | ./node_modules/.bin/coveralls",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "precommit": "yarn test",
     "prepush": "yarn test"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "morgan": "^1.8.1",
-    "pg": "^6.1.5",
-    "serve-favicon": "^2.4.2",
-    "webpack": "^2.4.1",
+    "pg": "^6.2.2",
+    "serve-favicon": "^2.4.3",
+    "webpack": "^2.6.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
     "@types/hammerjs": "^2.0.34",
-    "@types/history": "^4.5.0",
-    "@types/jest": "^19.2.2",
-    "@types/jquery": "^2.0.42",
+    "@types/history": "^4.5.1",
+    "@types/jest": "^19.2.3",
+    "@types/jquery": "^2.0.45",
     "@types/materialize-css": "^0.98.0",
-    "@types/node": "^7.0.16",
+    "@types/node": "^7.0.22",
     "@types/prismjs": "^1.6.2",
-    "@types/react": "^15.0.23",
+    "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/react-hot-loader": "^3.0.1",
     "@types/react-redux": "^4.4.40",
+    "@types/react-router": "^4.0.9",
     "@types/react-router-dom": "^4.0.4",
     "@types/react-router-redux": "^5.0.1",
     "@types/redux-devtools": "^3.0.37",
@@ -54,7 +55,7 @@
     "@types/webpack": "^2.2.15",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^2.0.1",
-    "autoprefixer": "^6.7.6",
+    "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -66,14 +67,14 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "coveralls": "^2.13.1",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.2",
     "del": "^2.2.2",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
@@ -84,47 +85,47 @@
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.3",
-    "image-webpack-loader": "^3.3.0",
+    "image-webpack-loader": "^3.3.1",
     "immutable": "4.0.0-rc.2",
-    "jest": "^19.0.2",
+    "jest": "^20.0.3",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "materialize-css": "^0.98.2",
-    "node-sass": "^4.5.2",
-    "postcss": "^5.2.17",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-loader": "^1.3.3",
+    "node-sass": "^4.5.3",
+    "postcss": "^6.0.1",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-loader": "^2.0.5",
     "prismjs": "^1.6.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-hot-loader": "v3.0.0-beta.6",
-    "react-redux": "^5.0.4",
+    "react-hot-loader": "v3.0.0-beta.7",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "5.0.0-alpha.6",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
-    "redux-logger": "^3.0.1",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.2",
-    "style-loader": "^0.17.0",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "superagent": "^3.5.2",
-    "ts-jest": "^19.0.14",
-    "ts-loader": "^2.0.3",
-    "tslint": "^5.2.0",
-    "tslint-eslint-rules": "^4.0.0",
+    "ts-jest": "^20.0.4",
+    "ts-loader": "^2.1.0",
+    "tslint": "5.2.0",
+    "tslint-eslint-rules": "^4.1.0",
     "tslint-react": "^3.0.0",
-    "typescript": "^2.3.2",
-    "uglify-js": "^2.8.22",
+    "typescript": "^2.3.3",
+    "uglify-js": "^3.0.10",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
-    "webpack-bundle-analyzer": "^2.4.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-md5-hash": "^0.0.5"
   },
   "browserslist": [
@@ -139,10 +140,10 @@
         "jsx": "react"
       }
     },
+    "mapCoverage": true,
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
     "testPathIgnorePatterns": [
       "node_modules"
