--- a/package.json
+++ b/package.json
@@ -118,11 +118,11 @@
     "superagent": "^3.5.2",
     "ts-jest": "^20.0.4",
     "ts-loader": "^2.1.0",
-    "tslint": "5.2.0",
-    "tslint-eslint-rules": "^4.1.0",
+    "tslint": "^5.3.2",
+    "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.0.0",
     "typescript": "^2.3.3",
-    "uglify-js": "^3.0.11",
+    "uglify-js": "^3.0.12",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "webpack-bundle-analyzer": "^2.8.2",
