revert fixed git hook name error

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "server": "babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "pre-commit": "yarn test",
-    "pre-push": "yarn test",
-    "post-receive": "yarn coveralls"
+    "precommit": "yarn test",
+    "prepush": "yarn test",
+    "postreceive": "yarn coveralls"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
