change postreceive to postupdate

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "precommit": "yarn test",
     "prepush": "yarn test",
-    "postreceive": "yarn coveralls"
+    "postupdate": "yarn coveralls"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
