--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,8 @@ checkout:
     - yarn global add gulp
 
 machine:
+  node:
+    version: 7.10.0
   environment:
       PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
 
