--- a/package.json
+++ b/package.json
@@ -18,18 +18,6 @@
     "prepush": "yarn test && yarn coveralls"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "compression": "^1.6.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.3",
-    "morgan": "^1.8.2",
-    "pg": "^6.2.3",
-    "serve-favicon": "^2.4.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
-  },
-  "devDependencies": {
     "@types/express": "^4.0.35",
     "@types/hammerjs": "^2.0.34",
     "@types/history": "^4.5.1",
@@ -66,7 +54,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
-    "coveralls": "^2.13.1",
+    "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.3",
     "del": "^2.2.2",
     "eslint": "^3.19.0",
@@ -75,6 +65,7 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
@@ -84,14 +75,14 @@
     "hammerjs": "^2.0.8",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.3",
     "image-webpack-loader": "^3.3.1",
     "immutable": "4.0.0-rc.2",
-    "jest": "^20.0.4",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "materialize-css": "^0.98.2",
+    "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "pg": "^6.2.3",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.5",
@@ -112,11 +103,11 @@
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.5",
+    "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "superagent": "^3.5.2",
-    "ts-jest": "^20.0.4",
     "ts-loader": "^2.1.0",
     "tslint": "^5.3.2",
     "tslint-eslint-rules": "^4.1.1",
@@ -125,8 +116,17 @@
     "uglify-js": "^3.0.12",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
+    "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-md5-hash": "^0.0.5"
+  },
+  "devDependencies": {
+    "coveralls": "^2.13.1",
+    "husky": "^0.13.3",
+    "jest": "^20.0.4",
+    "ts-jest": "^20.0.4"
   },
   "browserslist": [
     "> 1%",
