--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest --no-cache --coverage",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "precommit": "yarn test",
-    "prepush": "yarn test && yarn coveralls"
+    "prepush": "yarn test && yarn coveralls && gulp clean && NODE_ENV=production gulp build"
   },
   "dependencies": {
     "@types/express": "^4.0.35",
@@ -72,6 +72,8 @@
     "gulp-eslint": "^3.0.1",
     "gulp-stylelint": "^3.9.0",
     "gulp-tslint": "^8.1.0",
+    "gulp-unzip": "^0.2.0",
+    "gulp-zip": "^4.0.0",
     "hammerjs": "^2.0.8",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
@@ -124,7 +126,7 @@
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
-    "husky": "^0.13.3",
+    "husky": "^0.13.4",
     "jest": "^20.0.4",
     "ts-jest": "^20.0.4"
   },
