--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "server": "babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "deploy": "gulp clean && NODE_ENV=production gulp build && git add frontend/dist.zip && git commit -m \"updated dist.zip and prepare for deploy\" --no-verify && git push --no-verify && git push heroku master --no-verify",
+    "deploy": "gulp clean && NODE_ENV=production gulp build && git add frontend/dist.zip && git commit -m \"updated dist.zip and prepare for deployment\" --no-verify && git push --no-verify && git push heroku master --no-verify",
     "precommit": "yarn test",
     "prepush": "yarn test && yarn coveralls"
   },
@@ -25,7 +25,7 @@
     "@types/jest": "^19.2.3",
     "@types/jquery": "^2.0.45",
     "@types/materialize-css": "^0.98.0",
-    "@types/node": "^7.0.22",
+    "@types/node": "^7.0.23",
     "@types/prismjs": "^1.6.2",
     "@types/react": "^15.0.25",
     "@types/react-dom": "^15.5.0",
@@ -76,6 +76,7 @@
     "gulp-unzip": "^0.2.0",
     "gulp-zip": "^4.0.0",
     "hammerjs": "^2.0.8",
+    "helmet": "^3.6.1",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
