use pg-promise instead of pg

--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
     "@types/express": "^4.0.35",
     "@types/hammerjs": "^2.0.34",
     "@types/history": "^4.5.1",
-    "@types/jest": "^19.2.3",
-    "@types/jquery": "^2.0.45",
+    "@types/jest": "^19.2.4",
+    "@types/jquery": "^2.0.46",
     "@types/materialize-css": "^0.98.0",
-    "@types/node": "^7.0.23",
+    "@types/node": "^7.0.27",
     "@types/prismjs": "^1.6.2",
-    "@types/react": "^15.0.25",
+    "@types/react": "^15.0.26",
     "@types/react-dom": "^15.5.0",
     "@types/react-hot-loader": "^3.0.1",
-    "@types/react-redux": "^4.4.40",
+    "@types/react-redux": "^4.4.41",
     "@types/react-router": "^4.0.11",
     "@types/react-router-dom": "^4.0.4",
-    "@types/react-router-redux": "^5.0.1",
+    "@types/react-router-redux": "^5.0.2",
     "@types/redux-devtools": "^3.0.37",
     "@types/redux-devtools-dock-monitor": "^1.1.30",
     "@types/redux-devtools-log-monitor": "^1.0.30",
     "@types/redux-logger": "^3.0.0",
     "@types/redux-promise": "^0.5.24",
-    "@types/superagent": "^2.0.36",
-    "@types/uuid": "^2.0.29",
+    "@types/superagent": "^2.0.37",
+    "@types/uuid": "^3.0.0",
     "@types/webpack": "^2.2.15",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^2.0.1",
@@ -86,7 +86,7 @@
     "materialize-css": "^0.98.2",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
-    "pg": "^6.2.3",
+    "pg-promise": "^5.8.2",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.5",
@@ -113,11 +113,11 @@
     "stylelint-config-standard": "^16.0.0",
     "superagent": "^3.5.2",
     "ts-loader": "^2.1.0",
-    "tslint": "^5.4.0",
+    "tslint": "^5.4.2",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.0.0",
     "typescript": "^2.3.4",
-    "uglify-js": "^3.0.14",
+    "uglify-js": "^3.0.15",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "webpack": "^2.6.1",
