--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "import/no-deprecated": 1,
     "import/no-duplicates": 2,
     "import/no-unresolved": 2,
-    "import/no-webpack-loader-syntax": 2
+    "import/no-webpack-loader-syntax": 2,
+    "import/prefer-default-export": 0
   }
 }
