fixed uuid type bug

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/jquery": "^3.2.1",
     "@types/materialize-css": "^0.98.3",
     "@types/node": "^7.0.31",
-    "@types/node-uuid": "^0.0.28",
     "@types/prismjs": "^1.6.2",
     "@types/react": "^15.0.29",
     "@types/react-dom": "^15.5.0",
@@ -41,6 +40,7 @@
     "@types/redux-logger": "^3.0.0",
     "@types/redux-promise": "^0.5.24",
     "@types/superagent": "^3.5.0",
+    "@types/uuid": "^3.0.0",
     "@types/webpack": "^2.2.16",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^2.0.1",
@@ -86,7 +86,6 @@
     "materialize-css": "^0.98.2",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
-    "node-uuid": "^1.4.8",
     "pg-promise": "^5.9.3",
     "postcss": "^6.0.2",
     "postcss-cssnext": "^2.11.0",
