upgrade webpack to v3

--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "@types/express": "^4.0.36",
     "@types/hammerjs": "^2.0.34",
     "@types/history": "^4.5.2",
-    "@types/jest": "^20.0.0",
-    "@types/jquery": "^3.2.1",
+    "@types/jest": "^20.0.1",
+    "@types/jquery": "^3.2.2",
     "@types/materialize-css": "^0.98.3",
-    "@types/node": "^7.0.31",
+    "@types/node": "^8.0.0",
     "@types/prismjs": "^1.6.2",
     "@types/react": "^15.0.29",
     "@types/react-dom": "^15.5.0",
     "@types/react-hot-loader": "^3.0.1",
-    "@types/react-redux": "^4.4.43",
+    "@types/react-redux": "^4.4.44",
     "@types/react-router": "^4.0.11",
     "@types/react-router-dom": "^4.0.4",
     "@types/react-router-redux": "^5.0.2",
@@ -89,6 +89,7 @@
     "pg-promise": "^5.9.3",
     "postcss": "^6.0.2",
     "postcss-cssnext": "^2.11.0",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "prismjs": "^1.6.0",
     "progress-bar-webpack-plugin": "^1.9.3",
@@ -120,7 +121,7 @@
     "uglify-js": "^3.0.18",
     "url-loader": "^0.5.9",
     "uuid": "^3.1.0",
-    "webpack": "^2.6.1",
+    "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
