--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@types/redux-logger": "^3.0.0",
     "@types/redux-promise": "^0.5.24",
     "@types/superagent": "^3.5.0",
-    "@types/uuid": "^3.0.0",
-    "@types/webpack": "^2.2.16",
+    "@types/uuid": "3.0.0",
+    "@types/webpack": "^3.0.1",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^2.0.1",
     "autoprefixer": "^7.1.1",
@@ -83,11 +83,11 @@
     "immutable": "4.0.0-rc.2",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "materialize-css": "^0.98.2",
+    "materialize-css": "^0.99.0",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
-    "pg-promise": "^5.9.4",
-    "postcss": "^6.0.2",
+    "pg-promise": "^6.3.0",
+    "postcss": "^6.0.5",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
@@ -106,7 +106,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "run-sequence": "^1.2.2",
+    "run-sequence": "^2.0.0",
     "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
@@ -117,19 +117,19 @@
     "tslint": "^5.4.3",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.0.0",
-    "typescript": "^2.3.4",
+    "typescript": "2.4.0",
     "uglify-js": "^3.0.18",
     "url-loader": "^0.5.9",
     "uuid": "^3.1.0",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
+    "webpack-hot-middleware": "^2.18.1",
     "webpack-md5-hash": "^0.0.5"
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
-    "husky": "^0.13.4",
+    "husky": "^0.14.2",
     "jest": "^20.0.4",
     "ts-jest": "^20.0.6"
   },
