upgrade circleci to version 2.0 && fixed heroku deploy timeout issues

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "server": "babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "deploy": "gulp clean && NODE_ENV=production gulp build && git add frontend/dist.zip && git commit -m \"updated dist.zip and prepare for deployment\" --no-verify && git push --no-verify && git push heroku master --no-verify",
+    "deploy": "heroku container:push web",
     "precommit": "yarn test",
     "prepush": "yarn test && yarn coveralls"
   },
@@ -110,18 +110,18 @@
     "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
-    "stylelint": "^7.13.0",
-    "stylelint-config-standard": "^16.0.0",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
     "superagent": "^3.5.2",
-    "ts-loader": "^2.1.0",
+    "ts-loader": "^2.3.0",
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.0.0",
     "typescript": "2.4.0",
-    "uglify-js": "^3.0.24",
+    "uglify-js": "^3.0.25",
     "url-loader": "^0.5.9",
     "uuid": "^3.1.0",
-    "webpack": "^3.2.0",
+    "webpack": "^3.3.0",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.2",
