--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,10 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "at-rule-no-unknown": [ true, {
+      "ignoreAtRules": [
+        "extend"
+      ]
+    }]
+  }
 }
