--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,35 @@
-checkout:
-  post:
-    - yarn global add gulp
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 
-machine:
-  node:
-    version: 7.10.0
+version: 2
 
-dependencies:
-  override:
-    - yarn
-  cache_directories:
-    - ~/.cache/yarn
+defaults: &defaults
+  working_directory: ~
+  docker:
+    - image: docker/compose
 
-test:
-  override:
-    - yarn test
+jobs:
+  build:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - docker-compose up
+  test:
+    <<: *defaults
+    steps:
+      - run: yarn test
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
