--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,17 @@ version: '2.1'
 
 services:
   web:
-    build: .
+    build:
+      context: .
+      args:
+        PORT: ${PORT}
     restart: always
     ports:
-      - "3003:3003"
+      - "$PORT:$PORT"
     depends_on:
       - postgres
     environment:
-      - NODE_ENV=production
+      - PORT=${PORT}
 
   postgres:
     image: postgres:9.5
@@ -17,6 +20,6 @@ services:
     volumes:
       - ./backend/postgres-init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      - POSTGRES_DB=docker
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
