fixed uuid issue

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/redux-logger": "^3.0.0",
     "@types/redux-promise": "^0.5.24",
     "@types/superagent": "^3.5.3",
-    "@types/uuid": "3.0.0",
     "@types/webpack": "^3.0.5",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^2.0.1",
@@ -86,6 +85,7 @@
     "materialize-css": "^0.100.1",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "node-uuid": "^1.4.8",
     "pg-promise": "^6.3.6",
     "postcss": "^6.0.8",
     "postcss-cssnext": "^3.0.2",
@@ -120,7 +120,6 @@
     "typescript": "2.4.0",
     "uglify-js": "^3.0.27",
     "url-loader": "^0.5.9",
-    "uuid": "^3.1.0",
     "webpack": "^3.4.1",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-dev-middleware": "^1.10.2",
