--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "import/no-duplicates": 2,
     "import/no-unresolved": 2,
     "import/no-webpack-loader-syntax": 2,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "jsx-a11y/href-no-hash": "off"
   }
 }
