fixed heap out of memory exception caused by immutable by adding noStrictGenericChecks, should remove this flag once typescript 2.5.3 released as they handled this case

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,5 +6,10 @@
         "extend"
       ]
     }]
-  }
+  },
+  "ignoreFiles": [
+    "./node_modules/**",
+    "./frontend/dist/**",
+    "./coverage/**"
+  ]
 }
