--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,13 @@
     "alwaysStrict": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmitOnError": true,
     "noImplicitAny": true,
+    "noImplicitReturns": true,
     "noImplicitThis": true,
+    "noStrictGenericChecks": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noEmitOnError": true,
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
