--- a/package.json
+++ b/package.json
@@ -19,75 +19,75 @@
     "prepush": "yarn test && yarn coveralls"
   },
   "dependencies": {
-    "@types/express": "^4.0.36",
-    "@types/hammerjs": "^2.0.34",
+    "@types/express": "^4.0.37",
+    "@types/hammerjs": "^2.0.35",
     "@types/history": "^4.5.2",
-    "@types/jest": "^20.0.6",
-    "@types/jquery": "^3.2.11",
+    "@types/jest": "^20.0.8",
+    "@types/jquery": "^3.2.12",
     "@types/materialize-css": "^0.100.0",
     "@types/node-uuid": "^0.0.28",
-    "@types/prismjs": "^1.6.2",
-    "@types/react": "^16.0.2",
-    "@types/react-dom": "^15.5.2",
-    "@types/react-hot-loader": "^3.0.1",
-    "@types/react-redux": "^5.0.0",
-    "@types/react-router": "^4.0.14",
+    "@types/prismjs": "^1.6.3",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-hot-loader": "^3.0.4",
+    "@types/react-redux": "^5.0.7",
+    "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.7",
-    "@types/react-router-redux": "^5.0.5",
-    "@types/redux-devtools": "^3.0.37",
+    "@types/react-router-redux": "^5.0.8",
+    "@types/redux-devtools": "^3.0.40",
     "@types/redux-devtools-dock-monitor": "^1.1.30",
     "@types/redux-devtools-log-monitor": "^1.0.32",
-    "@types/redux-logger": "^3.0.0",
-    "@types/redux-promise": "^0.5.24",
-    "@types/superagent": "^3.5.3",
-    "@types/webpack": "^3.0.8",
+    "@types/redux-logger": "^3.0.3",
+    "@types/redux-promise": "^0.5.26",
+    "@types/superagent": "^3.5.5",
+    "@types/webpack": "^3.0.10",
     "@types/webpack-env": "^1.13.0",
-    "add-asset-html-webpack-plugin": "^2.1.0",
-    "autoprefixer": "^7.1.2",
-    "awesome-typescript-loader": "^3.2.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
+    "add-asset-html-webpack-plugin": "^2.1.1",
+    "autoprefixer": "^7.1.3",
+    "awesome-typescript-loader": "^3.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.7",
     "del": "^3.0.0",
-    "eslint": "^4.4.1",
+    "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.2.0",
+    "eslint-plugin-react": "^7.3.0",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
-    "gulp-stylelint": "^3.9.0",
+    "gulp-stylelint": "^5.0.0",
     "gulp-tslint": "^8.1.2",
     "gulp-unzip": "^0.2.0",
     "gulp-zip": "^4.0.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.8.1",
-    "history": "^4.6.3",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.3.1",
+    "image-webpack-loader": "^3.4.2",
     "immutable": "4.0.0-rc.2",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "materialize-css": "^0.100.1",
+    "materialize-css": "^0.100.2",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "node-uuid": "^1.4.8",
-    "pg-promise": "^6.3.8",
-    "postcss": "^6.0.8",
+    "pg-promise": "^6.5.1",
+    "postcss": "^6.0.11",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
@@ -97,7 +97,7 @@
     "react-dom": "^15.6.1",
     "react-hot-loader": "v3.0.0-beta.7",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.2",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
@@ -110,28 +110,28 @@
     "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
-    "stylelint": "^8.0.0",
+    "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0",
-    "superagent": "^3.5.2",
-    "ts-loader": "^2.3.2",
-    "tslint": "^5.6.0",
+    "superagent": "^3.6.0",
+    "ts-loader": "^2.3.4",
+    "tslint": "^5.7.0",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.2.0",
-    "typescript": "2.4.0",
-    "uglify-js": "^3.0.27",
+    "typescript": "^2.5.2",
+    "uglify-js": "^3.0.28",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.3",
+    "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
+    "webpack-hot-middleware": "^2.19.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
     "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "ts-jest": "^20.0.10"
+    "jest": "^21.0.1",
+    "ts-jest": "^21.0.0"
   },
   "browserslist": [
     "> 1%",
