--- a/.babelrc
+++ b/.babelrc
@@ -2,23 +2,15 @@
   "presets": [
     "es2015",
     "react",
-    "stage-2"
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-runtime"
   ],
   "env": {
     "development": {
       "plugins": [
-        "react-hot-loader/babel",
-        "transform-runtime"
-      ]
-    },
-    "test": {
-      "plugins": [
-        "transform-runtime"
-      ]
-    },
-    "production": {
-      "plugins": [
-        "transform-runtime"
+        "react-hot-loader/babel"
       ]
     }
   }
