rewrite fetchApi.tsx, changed react-redux global state and fixed several typescript issues

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,10 @@
     "stage-0"
   ],
   "plugins": [
-    "transform-runtime"
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }]
   ],
   "env": {
     "development": {
