--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build-dll": "webpack --color --config webpack.config.dll.babel.js",
     "build-prod": "webpack --color --config webpack.config.prod.babel.js",
-    "profile": "profile=true webpack --color --config webpack.config.prod.babel.js",
+    "profile": "webpack --color --config webpack.config.profile.babel.js",
     "server": "nodemon --exec babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
@@ -22,7 +22,7 @@
     "@types/express": "4.0.39",
     "@types/hammerjs": "2.0.35",
     "@types/history": "4.6.2",
-    "@types/jest": "21.1.6",
+    "@types/jest": "21.1.8",
     "@types/jquery": "3.2.16",
     "@types/materialize-css": "0.100.2",
     "@types/node-uuid": "0.0.28",
@@ -31,8 +31,8 @@
     "@types/react-dom": "16.0.3",
     "@types/react-hot-loader": "3.0.5",
     "@types/react-redux": "5.0.13",
-    "@types/react-router": "4.0.17",
-    "@types/react-router-dom": "4.2.1",
+    "@types/react-router": "4.0.18",
+    "@types/react-router-dom": "4.2.2",
     "@types/redux-devtools": "3.0.42",
     "@types/redux-devtools-dock-monitor": "1.1.31",
     "@types/redux-devtools-log-monitor": "1.0.32",
@@ -87,11 +87,12 @@
     "node-sass": "4.7.2",
     "node-uuid": "1.4.8",
     "nodemon": "1.12.1",
+    "offline-plugin": "4.8.4",
     "pg": "7.4.0",
     "postcss": "6.0.14",
     "postcss-cssnext": "3.0.2",
     "postcss-import": "11.0.0",
-    "postcss-loader": "2.0.8",
+    "postcss-loader": "2.0.9",
     "prismjs": "1.8.4",
     "progress-bar-webpack-plugin": "1.10.0",
     "react": "16.1.1",
@@ -122,7 +123,7 @@
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-bundle-analyzer": "2.9.1",
-    "webpack-dev-middleware": "1.12.0",
+    "webpack-dev-middleware": "1.12.1",
     "webpack-hot-middleware": "2.20.0",
     "webpack-merge": "4.1.1"
   },
