better favicon support with HtmlWebpackPlugin

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "type": "git",
     "url": "https://github.com/Armour/express-webpack-react-redux-typescript-boilerplate.git"
   },
-  "author": "Chong Guo <cguo@azendless.com>",
+  "author": "Chong Guo <armourcy@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build-dll": "webpack --color --config webpack.config.dll.babel.js",
-    "build-prod": "webpack --color --config webpack.config.prod.babel.js",
-    "profile": "webpack --color --config webpack.config.profile.babel.js",
+    "build-dll": "webpack --config webpack.config.dll.babel.js",
+    "build-prod": "webpack --config webpack.config.prod.babel.js",
+    "profile": "webpack --config webpack.config.profile.babel.js",
     "server": "nodemon --exec babel-node backend/server.js",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
@@ -114,7 +114,6 @@
     "redux-thunk": "2.2.0",
     "run-sequence": "2.2.0",
     "sass-loader": "6.0.6",
-    "serve-favicon": "2.4.5",
     "style-loader": "0.19.1",
     "stylelint": "8.4.0",
     "stylelint-config-standard": "18.0.0",
