update dependencies && upgrade to webpack 4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "es6",
+    "module": "commonjs",
     "target": "es6",
-    "jsx": "preserve",
-    "moduleResolution": "node",
+    "jsx": "react",
     "baseUrl": "frontend/src",
     "typeRoots": [
       "node_modules/@types"
