--- a/package.json
+++ b/package.json
@@ -8,130 +8,125 @@
   "author": "Chong Guo <armourcy@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build-dll": "webpack --config webpack.config.dll.babel.js",
-    "build-prod": "webpack --config webpack.config.prod.babel.js",
-    "profile": "webpack --config webpack.config.profile.babel.js",
+    "run-dev": "yarn build-dll && NODE_ENV=development yarn server",
+    "run-prod": "yarn build-prod && NODE_ENV=production yarn server",
+    "build-dll": "yarn clean && webpack --config webpack.config.dll.babel.js",
+    "build-prod": "yarn build-dll && webpack --config webpack.config.prod.babel.js",
+    "profile": "yarn build-dll && webpack --config webpack.config.profile.babel.js",
     "server": "nodemon --exec babel-node backend/server.js",
+    "eslint": "eslint -f codeframe \"**/*.js\" \"**/*.jsx\" ",
+    "tslint": "tslint -t codeFrame -e \"node_modules/**\" \"**/*.ts(x)\" \"**/*.tsx\" ",
+    "stylelint": "stylelint \"**/*.css **/*.scss\" ",
+    "clean": "rm -rf frontend/dist .awcache coverage",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "deploy": "heroku container:push web",
-    "precommit": "yarn test",
+    "precommit": "yarn eslint && yarn tslint && yarn stylelint",
     "prepush": "yarn test && yarn coverage"
   },
   "dependencies": {
-    "@types/express": "4.11.0",
-    "@types/hammerjs": "2.0.35",
+    "@types/express": "4.11.1",
     "@types/history": "4.6.2",
-    "@types/jest": "22.0.1",
-    "@types/jquery": "3.2.17",
-    "@types/materialize-css": "0.100.3",
+    "@types/jest": "22.2.2",
+    "@types/materialize-css": "0.100.4",
     "@types/node-uuid": "0.0.28",
     "@types/prismjs": "1.9.0",
-    "@types/react": "16.0.34",
-    "@types/react-dom": "16.0.3",
-    "@types/react-hot-loader": "3.0.5",
-    "@types/react-redux": "5.0.14",
-    "@types/react-router": "4.0.20",
-    "@types/react-router-dom": "4.2.3",
-    "@types/redux-devtools": "3.0.42",
-    "@types/redux-devtools-dock-monitor": "1.1.31",
-    "@types/redux-devtools-log-monitor": "1.0.32",
+    "@types/react": "16.0.41",
+    "@types/react-dom": "16.0.4",
+    "@types/react-redux": "5.0.15",
+    "@types/react-router": "4.0.23",
+    "@types/react-router-dom": "4.2.5",
+    "@types/redux-devtools": "3.0.43",
+    "@types/redux-devtools-dock-monitor": "1.1.32",
+    "@types/redux-devtools-log-monitor": "1.0.33",
     "@types/redux-logger": "3.0.5",
-    "@types/redux-promise": "0.5.28",
-    "@types/superagent": "3.5.6",
-    "@types/webpack": "3.8.2",
-    "@types/webpack-env": "1.13.3",
-    "add-asset-html-webpack-plugin": "2.1.2",
-    "autoprefixer": "7.2.4",
-    "awesome-typescript-loader": "3.4.1",
+    "@types/superagent": "3.5.7",
+    "@types/webpack": "4.1.2",
+    "@types/webpack-env": "1.13.5",
+    "add-asset-html-webpack-plugin": "2.1.3",
+    "autoprefixer": "8.2.0",
+    "awesome-typescript-loader": "5.0.0-1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-loader": "7.1.4",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "babel-register": "6.26.0",
     "body-parser": "1.18.2",
-    "colors": "1.1.2",
-    "compression": "1.7.1",
+    "colors": "1.2.1",
+    "compression": "1.7.2",
     "connect-redis": "3.3.3",
     "connected-react-router": "4.3.0",
     "cookie-parser": "1.4.3",
     "coveralls": "3.0.0",
-    "css-loader": "0.28.8",
-    "del": "3.0.0",
-    "duplicate-package-checker-webpack-plugin": "2.0.2",
-    "eslint": "4.15.0",
+    "css-loader": "0.28.11",
+    "duplicate-package-checker-webpack-plugin": "3.0.0",
+    "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-webpack": "0.8.4",
-    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-import": "2.9.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.5.1",
-    "express": "4.16.2",
+    "eslint-plugin-react": "7.7.0",
+    "express": "4.16.3",
     "express-session": "1.15.6",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "gulp": "3.9.1",
-    "gulp-eslint": "4.0.1",
-    "gulp-stylelint": "6.0.0",
-    "gulp-tslint": "8.1.2",
-    "hammerjs": "2.0.8",
-    "helmet": "3.9.0",
-    "husky": "0.14.3",
+    "extract-text-webpack-plugin": "next",
+    "file-loader": "1.1.11",
+    "helmet": "3.12.0",
     "history": "4.7.2",
-    "html-webpack-plugin": "2.30.1",
-    "image-webpack-loader": "3.4.2",
+    "html-webpack-plugin": "3.1.0",
+    "husky": "0.14.3",
+    "image-webpack-loader": "4.2.0",
     "immutable": "4.0.0-rc.9",
-    "jest": "22.0.4",
-    "jquery": "3.2.1",
-    "lodash": "4.17.4",
+    "jest": "22.4.3",
+    "lodash": "4.17.5",
     "material-design-icons": "3.0.1",
     "materialize-css": "0.100.2",
     "morgan": "1.9.0",
-    "node-sass": "4.7.2",
+    "node-sass": "4.8.3",
     "node-uuid": "1.4.8",
-    "nodemon": "1.14.9",
+    "nodemon": "1.17.2",
     "offline-plugin": "4.9.0",
     "pg": "7.4.1",
-    "postcss": "6.0.16",
-    "postcss-cssnext": "3.0.2",
-    "postcss-import": "11.0.0",
-    "postcss-loader": "2.0.10",
-    "prismjs": "1.9.0",
-    "progress-bar-webpack-plugin": "1.10.0",
+    "postcss": "6.0.21",
+    "postcss-cssnext": "3.1.0",
+    "postcss-import": "11.1.0",
+    "postcss-loader": "2.1.3",
+    "prismjs": "1.13.0",
+    "progress-bar-webpack-plugin": "1.11.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-hot-loader": "3.1.3",
-    "react-redux": "5.0.6",
+    "react-hot-loader": "4.0.0",
+    "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
     "redux-logger": "3.0.6",
-    "redux-promise": "0.5.3",
     "redux-thunk": "2.2.0",
     "run-sequence": "2.2.1",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.19.1",
-    "stylelint": "8.4.0",
-    "stylelint-config-standard": "18.0.0",
+    "sass-loader": "6.0.7",
+    "style-loader": "0.20.3",
+    "stylelint": "9.1.3",
+    "stylelint-config-standard": "18.2.0",
     "superagent": "3.8.2",
-    "ts-jest": "22.0.1",
-    "ts-loader": "3.2.0",
-    "tslint": "5.8.0",
-    "tslint-microsoft-contrib": "5.0.1",
-    "tslint-react": "3.3.3",
-    "typescript": "2.6.2",
-    "uglify-js": "3.3.5",
-    "url-loader": "0.6.2",
-    "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2",
-    "webpack-dev-middleware": "2.0.4",
-    "webpack-hot-middleware": "2.21.0",
-    "webpack-merge": "4.1.1",
-    "webpack-pwa-manifest": "3.4.1"
+    "ts-jest": "22.4.2",
+    "ts-loader": "4.1.0",
+    "tslint": "5.9.1",
+    "tslint-react": "3.5.1",
+    "typescript": "2.7.2",
+    "uglify-js": "3.3.16",
+    "uglifyjs-webpack-plugin": "1.2.4",
+    "url-loader": "1.0.1",
+    "webpack": "4.2.0",
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-cli": "2.0.13",
+    "webpack-dev-middleware": "3.0.1",
+    "webpack-hot-middleware": "2.21.2",
+    "webpack-merge": "4.1.2",
+    "webpack-pwa-manifest": "3.6.2"
   },
   "browserslist": [
     "> 1%",
@@ -148,7 +143,6 @@
     ]
   },
   "jest": {
-    "mapCoverage": true,
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
